[gd_scene load_steps=9 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://bounce-ping.ogg" type="AudioStream" id=2]
[ext_resource path="res://bounce-boing.ogg" type="AudioStream" id=3]
[ext_resource path="res://fall-oow.ogg" type="AudioStream" id=4]
[ext_resource path="res://crash-boom.ogg" type="AudioStream" id=5]

[sub_resource type="CapsuleShape" id=1]
radius = 0.1
height = 0.2

[sub_resource type="CapsuleMesh" id=2]
radius = 0.1
mid_height = 0.2

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 1, 0.654902, 0, 1 )

[node name="Player" type="KinematicBody"]
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( -4.37114e-008, 0, 1, 0, 1, 0, -1, 0, -4.37114e-008, 0, 0, 0 )
shape = SubResource( 1 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( -4.37114e-008, 0.398829, -0.917025, 0, 0.917025, 0.398829, 1, 1.74334e-008, -4.00845e-008, -2.27171, 0.943656, 0 )
current = true
fov = 59.0625

[node name="Character" type="MeshInstance" parent="."]
transform = Transform( -4.37114e-008, 0, 1, 0, 1, 0, -1, 0, -4.37114e-008, 0, 0, 0 )
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="BouncePingPlayer" type="AudioStreamPlayer3D" parent="."]
visible = false
stream = ExtResource( 2 )
unit_db = 20.0

[node name="BounceBoingPlayer" type="AudioStreamPlayer3D" parent="."]
visible = false
stream = ExtResource( 3 )
unit_db = 20.0

[node name="FallOowPlayer" type="AudioStreamPlayer3D" parent="."]
visible = false
stream = ExtResource( 4 )
unit_db = 20.0

[node name="CrashBoomPlayer" type="AudioStreamPlayer3D" parent="."]
visible = false
stream = ExtResource( 5 )
unit_db = 20.0
